--- a/content/posts/2022-03-16-CTO-trap.markdown
+++ b/content/posts/2022-03-16-CTO-trap.markdown
@@ -1,6 +1,5 @@
 ---
-categories:
-- Leadership
+categories: ['Leadership']
 date: "2022-03-16T00:00:00Z"
 excerpt_separator: <!--excerpt-end-->
 title: The CTO trap
